--- a/style.css
+++ b/style.css
@@ -1,119 +1,159 @@
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@500;800&display=swap');
-*{
-    font-family: 'Open Sans', sans-serif;
-    /* background-color: #000; */
-}
-    
-.fundoClaro{
-    background-color: white;
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@500;800&display=swap");
+
+/*==================== VARIABLES CSS ====================*/
+:root {
+  /*========== Colors ==========*/
+  --cor-branca: white;
+  --cor-cinza: rgba(153, 153, 153, 1);
+  --cor-verde: #89c219;
+  --cor-preto: black;
+  --cor-luz-acessa: rgb(151, 228, 10);
+  --cor-operadores: #a5a1a1;
+  --cor-operadores-hover: #323330;
+  --cor-limpar-ecran: rgb(255, 0, 0);
+  --cor-limpar-digito: rgb(255, 115, 0);
+
+  font-family: "Open Sans", sans-serif;
 }
 
-.fundoEscuro{
-    background-color: black;
+.fundoClaro {
+  background-color: var(--cor-branca);
 }
 
-h1{
-    text-align: center;
+.fundoEscuro {
+  background-color: var(--cor-preto);
+}
+
+.robotEyeColorLight {
+  background-color: var(--cor-branca);
+}
+
+.robotEyeColorDark {
+  background-color: var(--cor-luz-acessa);
+  box-shadow: 0px 0px 43px 17px var(--cor-luz-acessa);
+}
+
+.robotEyeLeft {
+  height: 10px;
+  width: 10px;
+  border-radius: 50%;
+  position: absolute;
+  z-index: 1;
+  left: 36%;
+  top: 17%;
+}
+
+.robotEyeRight {
+  height: 10px;
+  width: 10px;
+  border-radius: 50%;
+  position: absolute;
+  z-index: 1;
+  left: 182%;
+  top: 7%;
+}
+
+h1 {
+  text-align: center;
 }
 
 .container {
-    max-width: 420px;
-    margin: 10vh auto 0 auto;
-    border: 1px solid black;
-    border-radius: 0.5rem;
-    margin: 1rem;
+  max-width: 420px;
+  margin: 10vh auto 0 auto;
+  border: 1px solid var(--cor-preto);
+  border-radius: 0.5rem;
+  margin: 1rem;
 }
 
 .outterContainer {
-    padding: 0.5rem;
-    border: 1px solid black;
-    border-radius: 1rem;
-    max-width: 450px;
-    margin: 10vh auto 0 auto;
-    box-shadow: 0px 0px 43px 17px rgba(153,153,153,1);
+  padding: 0.5rem;
+  border: 1px solid var(--cor-preto);
+  border-radius: 1rem;
+  max-width: 450px;
+  margin: 10vh auto 0 auto;
+  box-shadow: 0px 0px 43px 17px var(--cor-cinza);
 }
 
-.toggle{
-    padding-left: 12.5rem;
-}
-.logo{
-    padding: 1rem;
-    padding-bottom: 0;
-    font-family: 'Open Sans', sans-serif;
-    font-size: large;
-    font-weight: bold;
+.toggle {
+  padding-left: 14.5rem;
 }
 
-.displayOff{
-    border-radius: 0.5rem 0.5rem 0 0;
-    background-color: rgb(200, 220, 221);
-    line-height: 70px;
-    text-align: right;
+.logo {
+  padding: 1rem;
+  padding-bottom: 0;
+  font-size: large;
+  font-weight: bold;
 }
 
-.displayOn{
-    border-radius: 0.5rem 0.5rem 0 0;
-    background-color: rgb(151, 228, 10);
-    box-shadow: 0px 0px 43px 17px rgb(151, 228, 10);
-    line-height: 70px;
-    text-align: right;
+.displayOff {
+  border-radius: 0.5rem 0.5rem 0 0;
+  background-color: rgb(200, 220, 221);
+  line-height: 70px;
+  text-align: right;
 }
 
-    .display1 {
-        border-radius: 1rem;
-        height: 15px;      
-        font-size: 15px; 
-        text-overflow: ellipsis;
-    }
+.displayOn {
+  border-radius: 0.5rem 0.5rem 0 0;
+  background-color: var(--cor-luz-acessa);
+  box-shadow: 0px 0px 43px 17px var(--cor-luz-acessa);
+  line-height: 70px;
+  text-align: right;
+}
 
-    .display2 {
-        height: 70px;
-        line-height: 70px;
-        padding: 16px 8px;
-        font-size: 25px;
-        width: 392px;
-        overflow: hidden;
-    }
+.display1 {
+  border-radius: 1rem;
+  height: 15px;
+  font-size: 15px;
+  text-overflow: ellipsis;
+}
 
-.layout{
-    width: 100%;
+.display2 {
+  height: 70px;
+  line-height: 70px;
+  padding: 16px 8px;
+  font-size: 25px;
+  width: 392px;
+  overflow: hidden;
+}
+
+.layout {
+  width: 100%;
 }
 
 .button {
-    border: 1px solid #999;
-    border-radius: 7px;
-    width: 100px;
-    height: 100px;
-    text-align: center;
-    font-size: 25px;
-    cursor: pointer;
+  border: 1px solid var(--cor-cinza);
+  border-radius: 7px;
+  width: 100px;
+  height: 100px;
+  text-align: center;
+  font-size: 25px;
+  cursor: pointer;
 }
- .operatores {
-    background-color: #a5a1a1;
-}
-
-#equal{
-    background-color: #89c219;
+.operatores {
+  background-color: var(--cor-operadores);
 }
 
-#clearAll{
-    background-color: red
+#equal {
+  background-color: var(--cor-verde);
 }
 
-#clear{
-    background-color: orangered
+#clearAll {
+  background-color: var(--cor-limpar-ecran);
 }
 
+#clear {
+  background-color: var(--cor-limpar-digito);
+}
 
 .button:hover {
-    background-color: #323330;
-    color: white;
-    transition: 0.5s ease-in-out;
+  background-color: var(--cor-operadores-hover);
+  color: var(--cor-branca);
+  transition: 0.5s ease-in-out;
 }
 
 .numbers:hover {
-    background-color: #89c219;
-    text-shadow: 1px 1px rgb(255, 205, 152);
-    color: white;
-    transition: 0.5s ease-in-out;
+  background-color: var(--cor-verde);
+  text-shadow: 1px 1px var(--cor-cinza);
+  color: var(--cor-branca);
+  transition: 0.5s ease-in-out;
 }
